<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context="com.example.fit_x_logger_android.activities.MainActivity"
        android:background="@drawable/gradient_background">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="User Details"
                app:titleTextColor="@color/colorPrimary"
                />

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/id_Header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/userDetailsTitle"
                    android:textColor="@color/red"
                    android:fontFamily="@font/black_ops_one"

                    android:textSize="30sp"
                    android:textAlignment="center"
                    />

                <EditText
                    android:id="@+id/empName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:hint="@string/hint_Name"
                    android:textAlignment="center"
                    android:inputType="text"
                    android:maxLength="15"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"
                    android:background="@drawable/edit_bg"/>

                <EditText
                    android:id="@+id/empDateOfB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:textAlignment="center"
                    android:hint="@string/hint_dateOfB"
                    android:inputType="date"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:background="@drawable/edit_bg"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/empEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textAlignment="center"
                    android:autofillHints=""
                    android:hint="@string/hint_email"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"
                    android:background="@drawable/edit_bg"/>

                <EditText
                    android:id="@+id/empGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:hint="@string/hint_gender"
                    android:inputType="text"
                    android:maxLength="25"
                    android:textAlignment="center"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"
                    android:background="@drawable/edit_bg"/>

                <EditText
                    android:id="@+id/empSsNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:hint="@string/hint_ssNumber"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"
                    android:background="@drawable/edit_bg"/>

                <EditText
                    android:id="@+id/empNationality"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:hint="@string/hint_nationality"
                    android:inputType="text"
                    android:maxLength="15"
                    android:maxLines="1"
                    android:textAlignment="center"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"
                    android:background="@drawable/edit_bg"/>

                <EditText
                    android:id="@+id/empJobTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_jobTitle"
                    android:inputType="text"
                    android:maxLength="15"
                    android:maxLines="1"
                    android:textAlignment="center"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"
                    android:background="@drawable/edit_bg"/>

                <EditText
                    android:id="@+id/empHeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:hint="@string/hint_height"
                    android:layout_margin="8dp"
                    android:textAlignment="center"
                    android:padding="12dp"
                    android:inputType="numberDecimal"
                    android:textSize="14sp"
                    android:background="@drawable/edit_bg"/>

                <EditText
                    android:id="@+id/empWeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:hint="@string/hint_weight"
                    android:padding="12dp"
                    android:layout_margin="8dp"
                    android:textAlignment="center"
                    android:inputType="number"
                    android:textSize="14sp"
                    android:background="@drawable/edit_bg"/>

                <EditText
                    android:id="@+id/empBMI"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_bmi"
                    android:inputType="number"
                    android:maxLength="15"
                    android:maxLines="1"
                    android:textAlignment="center"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"
                    android:background="@drawable/edit_bg"/>

                <EditText
                    android:id="@+id/empFitRes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_res"
                    android:inputType="text"
                    android:maxLength="15"
                    android:maxLines="1"
                    android:textAlignment="center"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"
                    android:background="@drawable/edit_bg"/>



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="HealthCheck BMI Calculator"
                    android:fontFamily="@font/black_ops_one"
                    android:textColor="@color/red"
                    android:textSize="35sp"
                    android:layout_marginVertical="15dp"
                    android:textAlignment="center"
                    android:gravity="center_horizontal" />

                <EditText
                    android:id="@+id/Height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:hint="@string/hint_height"
                    android:padding="12dp"
                    android:inputType="numberDecimal"
                    android:textSize="14sp"
                    android:background="@drawable/edit_bg"/>


                <EditText
                    android:id="@+id/Weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:hint="@string/hint_weight"
                    android:padding="12dp"
                    android:inputType="numberDecimal"
                    android:textSize="14sp"
                    android:background="@drawable/edit_bg"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Your BMI:"
                    android:layout_marginHorizontal="30dp"
                    android:textAlignment="center"
                    android:fontFamily="@font/black_ops_one"
                    android:textColor="@color/red"
                    android:textSize="30sp"
                    android:gravity="center_horizontal" />

                <TextView
                    android:id="@+id/result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:fontFamily="@font/black_ops_one"
                    android:textColor="@color/red"
                    android:textSize="30sp"
                    android:gravity="center_horizontal" />

                <TextView
                    android:id="@+id/resultTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:gravity="center_horizontal" />

                <Button
                    android:id="@+id/btnCalBMI"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_marginHorizontal="30dp"
                    android:fontFamily="@font/black_ops_one"
                    android:layout_marginVertical="15dp"
                    android:textColor="@color/colorPrimary"
                    android:text="Calculate BMI"
                    android:background="@drawable/btn_bg"/>


                <Button
                    android:id="@+id/chooseImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@drawable/btn_bg"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/addImage_Btn"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="@font/black_ops_one"
                    android:textSize="16sp"
                    />

                <ImageView
                    android:id="@+id/empDataImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ic_launcher"/>



                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@drawable/btn_bg"
                    android:fontFamily="@font/black_ops_one"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/add_BtnEmp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>